--- a/Xamarin.LineSDK/Xamarin.LineSDK.iOS/Xamarin.LineSDK.iOS.csproj
+++ b/Xamarin.LineSDK/Xamarin.LineSDK.iOS/Xamarin.LineSDK.iOS.csproj
@@ -46,5 +46,17 @@
   <ItemGroup>
     <ObjcBindingCoreSource Include="Structs.cs" />
   </ItemGroup>
+  <ItemGroup Condition=" '$(Platform)' == 'iPhone' ">
+    <NativeReference Include="Frameworks\LineSDK.xcframework\ios-arm64_armv7\LineSDK.framework">
+      <Kind>Framework</Kind>
+      <SmartLink>True</SmartLink>
+    </NativeReference>
+   </ItemGroup>
+   <ItemGroup Condition=" '$(Platform)' == 'iPhoneSimulator' ">
+    <NativeReference Include="Frameworks\LineSDK.xcframework\ios-arm64_i386_x86_64-simulator\LineSDK.framework">
+      <Kind>Framework</Kind>
+      <SmartLink>True</SmartLink>
+    </NativeReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
