--- a/Xamarin.LineSDK/Xamarin.LineSDK.iOS/Xamarin.LineSDK.iOS.csproj
+++ b/Xamarin.LineSDK/Xamarin.LineSDK.iOS/Xamarin.LineSDK.iOS.csproj
@@ -11,6 +11,11 @@
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>Xamarin.LineSDK.iOS</AssemblyName>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
+    <PackageId>Xamarin.LineSDK.iOS</PackageId>
+    <PackageVersion>0.0.1</PackageVersion>
+    <Authors>Entap</Authors>
+    <PackageProjectUrl>https://github.com/entap/Xamarin.LineSDK/tree/main/Xamarin.LineSDK/Xamarin.LineSDK.iOS</PackageProjectUrl>
+    <Description>LINE SDK for iOS Swiftのバインディングライブラリ</Description>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -66,5 +71,12 @@
       <SmartLink>True</SmartLink>
     </NativeReference>
   </ItemGroup>
+   <ItemGroup>
+     <PackageReference Include="NuGet.Build.Packaging">
+       <Version>0.2.5-dev.8</Version>
+       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+       <PrivateAssets>all</PrivateAssets>
+     </PackageReference>
+   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
