--- a/Xamarin.LineSDK/Xamarin.LineSDK.iOS/Xamarin.LineSDK.iOS.csproj
+++ b/Xamarin.LineSDK/Xamarin.LineSDK.iOS/Xamarin.LineSDK.iOS.csproj
@@ -16,6 +16,7 @@
     <Authors>Entap</Authors>
     <PackageProjectUrl>https://github.com/entap/Xamarin.LineSDK/tree/main/Xamarin.LineSDK/Xamarin.LineSDK.iOS</PackageProjectUrl>
     <Description>LINE SDK for iOS Swiftのバインディングライブラリ</Description>
+    <PackageReleaseNotes>LINE SDK for iOS(Ver 5.8.1)</PackageReleaseNotes>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
