--- a/Xamarin.LineSDK/Xamarin.LineSDK.Android/Xamarin.LineSDK.Android.csproj
+++ b/Xamarin.LineSDK/Xamarin.LineSDK.Android/Xamarin.LineSDK.Android.csproj
@@ -18,6 +18,12 @@
     <AndroidClassParser>class-parse</AndroidClassParser>
     <AndroidCodegenTarget>XAJavaInterop1</AndroidCodegenTarget>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
+    <PackageId>Xamarin.LineSDK.Android</PackageId>
+    <PackageVersion>0.0.1</PackageVersion>
+    <Authors>Entap</Authors>
+    <Description>LINE SDK for Androidのバインディングライブラリ</Description>
+    <PackageProjectUrl>https://github.com/entap/Xamarin.LineSDK/tree/main/Xamarin.LineSDK/Xamarin.LineSDK.Android</PackageProjectUrl>
+    <PackageReleaseNotes>LINE SDK for Android(Ver 5.7.1)</PackageReleaseNotes>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,6 +61,13 @@
   </ItemGroup>
   <ItemGroup>
     <LibraryProjectZip Include="Jars\linesdk-5.7.1.aar" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NuGet.Build.Packaging">
+      <Version>0.2.5-dev.8</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
