[add]PackageReference : Xamarin.AndroidX.ConstraintLayout
ライブラリ追加先のプロジェクトでのビルドエラー解消
Error APT2260: attribute [layout_constraint] not found. (APT2260)

https://github.com/line/line-sdk-android/blob/65c001d235310f8dc21090b3b30bbbda2f5f0a89/dependencyVersion.gradle#L19
androidx.constraintlayout : 1.1.3

--- a/Xamarin.LineSDK/Xamarin.LineSDK.Android/Xamarin.LineSDK.Android.csproj
+++ b/Xamarin.LineSDK/Xamarin.LineSDK.Android/Xamarin.LineSDK.Android.csproj
@@ -68,6 +68,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.ConstraintLayout">
+      <Version>1.1.3</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
