--- a/Xamarin.LineSDK/Xamarin.LineSDK.Android/Xamarin.LineSDK.Android.csproj
+++ b/Xamarin.LineSDK/Xamarin.LineSDK.Android/Xamarin.LineSDK.Android.csproj
@@ -71,6 +71,9 @@
     <PackageReference Include="Xamarin.AndroidX.ConstraintLayout">
       <Version>1.1.3</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Kotlin.StdLib">
+      <Version>1.3.72</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
