--- a/Xamarin.LineSDK/Xamarin.LineSDK.Android/Xamarin.LineSDK.Android.csproj
+++ b/Xamarin.LineSDK/Xamarin.LineSDK.Android/Xamarin.LineSDK.Android.csproj
@@ -75,6 +75,11 @@
       <Version>1.3.72</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedReferenceJar Include="Jars\jjwt-api-0.11.1.jar" />
+    <EmbeddedReferenceJar Include="Jars\jjwt-impl-0.11.1.jar" />
+    <EmbeddedReferenceJar Include="Jars\jjwt-orgjson-0.11.1.jar" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
