[add]Xamarin.LineSDK.Android :EmbeddedReferenceJar : com.madgag.spongycastle:prov, com.madgag.spongycastle:core
実行時エラー対応
java.lang.RuntimeException: An error occurred while executing doInBackground()
 Caused by: java.lang.ClassNotFoundException: Didn't find class "org.spongycastle.jce.ECNamedCurveTable"
 Caused by: java.lang.ClassNotFoundException: Didn't find class "org.spongycastle.crypto.ec.CustomNamedCurves"

JarはMvnRepositoryより取得
https://mvnrepository.com/artifact/com.madgag.spongycastle/prov

https://github.com/line/line-sdk-android/blob/88808ddcf436c30db219d0a19ea6b7377f73532a/line-sdk/build.gradle#L85
https://github.com/line/line-sdk-android/blob/65c001d235310f8dc21090b3b30bbbda2f5f0a89/dependencyVersion.gradle#L49
spongycastle : 1.58.0.0

--- a/Xamarin.LineSDK/Xamarin.LineSDK.Android/Xamarin.LineSDK.Android.csproj
+++ b/Xamarin.LineSDK/Xamarin.LineSDK.Android/Xamarin.LineSDK.Android.csproj
@@ -79,6 +79,8 @@
     <EmbeddedReferenceJar Include="Jars\jjwt-api-0.11.1.jar" />
     <EmbeddedReferenceJar Include="Jars\jjwt-impl-0.11.1.jar" />
     <EmbeddedReferenceJar Include="Jars\jjwt-orgjson-0.11.1.jar" />
+    <EmbeddedReferenceJar Include="Jars\prov-1.58.0.0.jar" />
+    <EmbeddedReferenceJar Include="Jars\core-1.58.0.0.jar" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
