--- a/Xamarin.LineSDK/Xamarin.LineSDK.iOS/Xamarin.LineSDK.iOS.csproj
+++ b/Xamarin.LineSDK/Xamarin.LineSDK.iOS/Xamarin.LineSDK.iOS.csproj
@@ -42,9 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+    <Folder Include="Additions\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Additions\LineSDKErrorCode.cs" />
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinitions.cs" />
