--- a/Xamarin.LineSDK/Xamarin.LineSDK.iOS/Xamarin.LineSDK.iOS.csproj
+++ b/Xamarin.LineSDK/Xamarin.LineSDK.iOS/Xamarin.LineSDK.iOS.csproj
@@ -12,11 +12,12 @@
     <AssemblyName>Xamarin.LineSDK.iOS</AssemblyName>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
     <PackageId>Xamarin.LineSDK.iOS</PackageId>
-    <PackageVersion>0.0.1</PackageVersion>
+    <PackageVersion>0.0.2</PackageVersion>
     <Authors>Entap</Authors>
     <PackageProjectUrl>https://github.com/entap/Xamarin.LineSDK/tree/main/Xamarin.LineSDK/Xamarin.LineSDK.iOS</PackageProjectUrl>
     <Description>LINE SDK for iOS Swiftのバインディングライブラリ</Description>
-    <PackageReleaseNotes>LINE SDK for iOS(Ver 5.8.1)</PackageReleaseNotes>
+    <PackageReleaseNotes>LINE SDK for iOS(Ver 5.8.1)
+・LineSDKErrorCode定義</PackageReleaseNotes>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
