--- a/Xamarin.LineSDK/Xamarin.LineSDK.Android/Xamarin.LineSDK.Android.csproj
+++ b/Xamarin.LineSDK/Xamarin.LineSDK.Android/Xamarin.LineSDK.Android.csproj
@@ -19,11 +19,12 @@
     <AndroidCodegenTarget>XAJavaInterop1</AndroidCodegenTarget>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
     <PackageId>Xamarin.LineSDK.Android</PackageId>
-    <PackageVersion>0.0.1</PackageVersion>
+    <PackageVersion>0.0.2</PackageVersion>
     <Authors>Entap</Authors>
     <Description>LINE SDK for Androidのバインディングライブラリ</Description>
     <PackageProjectUrl>https://github.com/entap/Xamarin.LineSDK/tree/main/Xamarin.LineSDK/Xamarin.LineSDK.Android</PackageProjectUrl>
-    <PackageReleaseNotes>LINE SDK for Android(Ver 5.7.1)</PackageReleaseNotes>
+    <PackageReleaseNotes>LINE SDK for Android(Ver 5.7.1)
+・Com.Linecorp.Linesdk.Widget.LoginButton有効化</PackageReleaseNotes>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
