--- a/LineSDK.NET/LineSDK.NET.Android/LineSDK.NET.Android.csproj
+++ b/LineSDK.NET/LineSDK.NET.Android/LineSDK.NET.Android.csproj
@@ -4,6 +4,15 @@
     <SupportedOSPlatformVersion>21</SupportedOSPlatformVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+
+    <AssemblyName>LineSDK.NET.Android</AssemblyName>
+    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
+    <PackageId>LineSDK.NET.Android</PackageId>
+    <PackageVersion>0.0.1</PackageVersion>
+    <Authors>Entap</Authors>
+    <PackageProjectUrl>https://github.com/entap/Xamarin.LineSDK/tree/main/Xamarin.LineSDK/Xamarin.LineSDK.iOS</PackageProjectUrl>
+    <Description>LINE SDK for Androidのバインディングライブラリ</Description>
+    <PackageReleaseNotes>Xamarin.LineSDK.Androidから移植:LINE SDK for Android(Ver 5.7.1)</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
